--- a/styles.css/style.css
+++ b/styles.css/style.css
@@ -1,5 +1,57 @@
 /* Work Sans Font From Google Font */
-  @import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,500;1,600;1,700;1,800&display=swap');
-*{
-  font-family: 'Work Sans', sans-serif;
+@import url("https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,500;1,600;1,700;1,800&display=swap");
+
+/* Shared Styles */
+* {
+  font-family: "Work Sans", sans-serif;
+}
+.btn_primary{
+  
+}
+
+/* Header Styles */
+header {
+  background: rgba(255, 144, 14, 0.1);
+  padding: 50px 240px;
+}
+nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+nav > ul {
+  display: flex;
+}
+.nav_tittle {
+  font-size: 3rem;
+  font-weight: 700;
+  color: #131313;
+}
+nav li {
+  list-style: none;
+  text-decoration: none;
+  font-weight: 500;
+  font-size: 1rem;
+  color: #424242;
+  margin-right: 30px;
+}
+nav li a {
+  text-decoration: none;
+  color: #131313;
+}
+/* Banner Styles */
+.banner_content {
+  max-width: 800px;
+  text-align: center;
+  margin: 0 auto;
+}
+.banner_tittle {
+  color: #131313;
+  font-size: 64px;
+  font-weight: 700;
+}
+.banner_description {
+  color: #727272;
+  font-size: 16px;
+  font-weight: 400;
 }
