--- a/styles.css/style.css
+++ b/styles.css/style.css
@@ -15,7 +15,9 @@
   border: 0;
   padding: 20px 25px;
 }
-
+.text_light_gray {
+  color: #727272;
+}
 /* Header Styles */
 header {
   background: rgba(255, 144, 14, 0.1);
@@ -57,38 +59,15 @@ nav li a {
   font-size: 64px;
   font-weight: 700;
 }
-.banner_description {
-  color: #727272;
-  font-size: 16px;
-  font-weight: 400;
-}
 .banner img {
   margin-top: 20px;
   width: 100%;
 }
-/* Responsive Media Queries */
-/* Mobile Device */
-@media screen and (max-width: 576px) {
-  header {
-    padding: 20px;
-  }
-  nav {
-    flex-direction: column;
-  }
-}
-@media screen and (min-width: 576px) and (max-width: 960px) {
-  header {
-    padding: 50px;
-  }
-  nav {
-    flex-direction: column;
-  }
-}
 
 /* Main Styles */
-main {
+main{
   max-width: 1440px;
-  margin: 0 auto;
+  margin: 70px auto;
 }
 
 /* Teams Styles */
@@ -122,4 +101,31 @@ main {
   color: #ff900e;
   font-size: 45px;
   font-weight: 700;
+}
+
+
+/* Responsive Media Queries */
+/* Mobile Device */
+@media screen and (max-width: 576px) {
+  header {
+    padding: 20px;
+  }
+  nav, .teams_container {
+    flex-direction: column;
+  }
+  .teams_img_container{
+    grid-template-columns: 1fr;
+  }
+  .teams_content {
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+}
+@media screen and (min-width: 576px) and (max-width: 960px) {
+  header {
+    padding: 50px;
+  }
+  nav, .teams_container {
+    flex-direction: column;
+  }
 }
