--- a/styles.css/style.css
+++ b/styles.css/style.css
@@ -27,7 +27,7 @@
 /* Header Styles */
 header {
   background: rgba(255, 144, 14, 0.1);
-  padding: 50px 240px;
+  padding: 10px 240px;
 }
 nav {
   display: flex;
@@ -103,6 +103,23 @@ main {
   font-size: 45px;
   font-weight: 700;
 }
+/* Feture STyles */
+.features {
+  display: flex;
+  margin-top: 130px;
+  gap: 50px;
+}
+.features .section_tittle{
+  border-left: 9px solid #FF900E;
+  padding-left: 15px;
+}
+.feature_content .card {
+  border-radius: 8px;
+  padding: 30px;
+  margin-bottom: 20px;
+  background: #fff;
+  box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.06);
+}
 /* Card Styles */
 .fact_card_container {
   display: flex;
@@ -115,28 +132,28 @@ main {
   text-align: center;
   padding: 40px 30px;
 }
-.fact_card_container .card_title{
+.fact_card_container .card_title {
   font-weight: 600;
   margin-bottom: 30px;
 }
-.fact_card_container .card_stats{
+.fact_card_container .card_stats {
   font-size: 2.8rem;
   color: #424242;
   margin-top: 5px;
   margin-bottom: 5px;
 }
 /* Sponsers Styles */
-.sponser{
+.sponser {
   text-align: center;
 }
-.sponser_img_container{
+.sponser_img_container {
   display: flex;
   justify-content: space-evenly;
   margin-top: 50px;
   gap: 40px;
   align-items: center;
 }
-.sponser_img_container img{
+.sponser_img_container img {
   width: 170px;
 }
 /* Responsive Media Queries */
@@ -159,7 +176,7 @@ main {
     padding-left: 20px;
     padding-right: 20px;
   }
-  .fact_card_container{
+  .fact_card_container {
     gap: 10px;
   }
 }
@@ -168,7 +185,8 @@ main {
     padding: 50px;
   }
   nav,
-  .teams_container {
+  .teams_container,
+  .sponser_img_container {
     flex-direction: column;
   }
 }
